fix: overflow

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -23,6 +23,7 @@ body {
   line-height: 1.2;
   margin: 0;
   padding: 0;
+  overflow: hidden;
   color: #484A5D;
   background-color: #FFFFFF;
   display: flex;
